--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
-    "gulp-connect-php": "0.0.8"
+    "gulp-connect-php": "0.0.8",
+    "require-dir": "^0.3.1"
   }
 }
