--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
     "gulp-connect-php": "0.0.8",
+    "gulp-csso": "^2.0.0",
+    "gulp-ignore": "^2.0.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-stylus": "^2.6.0",
+    "gulp-uglify": "^2.0.1",
     "require-dir": "^0.3.1"
   }
 }
