--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^2.0.1",
-    "require-dir": "^0.3.1"
+    "require-dir": "^0.3.1",
+    "run-sequence": "^1.2.2"
   }
 }
