--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /node_modules/
-/httpdocs/assets/
+/httpdocs/assets/*
+/data/templates_c/*
+
+!/httpdocs/assets/.gitkeep
+!/data/templates_c/.gitkeep
