--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp-connect-php": "0.0.8",
     "gulp-csso": "^2.0.0",
     "gulp-ignore": "^2.0.2",
+    "gulp-notify": "^3.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-stylus": "^2.6.0",
     "gulp-uglify": "^2.0.1",
